# EE5453

./: README.md  flake.nix
assignments/1/: Cargo.toml  README.md  decrypted  encrypted
assignments/1/src/: main.rs
assignments/2/c/: Cargo.toml
assignments/2/c/src/: main.rs
assignments/2/s/: Cargo.toml  test_file.txt
assignments/2/s/src/: main.rs
assignments/3/: README.md
assignments/3/c/: Cargo.toml  test_file_back.txt
assignments/3/c/src/: main.rs
assignments/3/s/: Cargo.toml
assignments/3/s/src/: main.rs
assignments/4/: README.md
assignments/4/c/: Cargo.toml
assignments/4/c/src/: lib.rs  main.rs
assignments/4/s/: s.py
assignments/5/: README.md
assignments/5/c/: Cargo.toml  server_enck.pem
assignments/5/c/src/: lib.rs  main.rs
assignments/5/s/: client_vrfk.pem  s.py  server_vrfk.pem
assignments/6/: README.md
assignments/6/s/: client_deck.pem  client_enck.pem  client_sigk.pem  keygen.py  server_deck.pem  server_sigk.pem
exams/: JamesRyan.md  pandoc_latex.yml
exams/final/: JamesRyan.md  gen.sh  header.yml
notes/: l0  l1  l2  l3  l4  l5  l6  l7  l8  l9  la  lb  lc  ld  le  lf  lg  lh  li  lj  lk  ll  lm  ln  lo  lp  lq  lr
