[package]
name = "c"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.2.20", features = ["derive"] }
hex = "0.4.3"
serde = { version = "1.0.144", features = ["derive"] }
serde_json = { version = "1.0.85", features = ["alloc"] }
text_io = "0.1.12"
xsalsa20poly1305 = "0.9.0"
