[package]
name = "c"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aes-gcm = "0.10.1"
clap = { version = "3.2.20", features = ["derive"] }
hex = "0.4.3"
text_io = "0.1.12"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
