[package]
name = "c"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.2.20", features = ["derive"] }
hex = "0.4.3"
text_io = "0.1.12"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
openssl = {version = "0.10", features = ["vendored"]}
aes = "0.8.1"
cbc = { version = "0.1.2", features = ["alloc"] }
rand = "0.8.5"
sha2 = { version = "0.10.6", features = ["asm"] }
